# totalmapper

./: .gitignore  Cargo.toml  README.md  build-deb  build-raw
.cargo/: config.toml
.github/workflows/: release.yml  release2.yml  release3.yml
data/: example-layout-1.json
release-scripts/: build-deb  build-deb-in-docker  build-focal  build-groovy  build-hirsute  build-impish  build-jammy  build-kinetic  build-noble  build-raw-aarch64  build-raw-amd64
src/: char_production_map.rs  complete_tests.rs  default_fancy_layouts.rs  default_layouts.rs  dev_input_mapping.rs  dev_input_rw.rs  events.rs  example_hardware.rs  fancy_keys.rs  fancy_layout_interpreting.rs  fork_utils.rs  key_codes.rs  key_transforms.rs  keyboard_listing.rs  keys.rs  layout_generation.rs  layout_loading.rs  layout_parsing_formatting.rs  log_utils.rs  main.rs  monitor.rs  monitor_raw.rs  monitor_tablet_mode.rs  openclose.rs  physical_keyboard_layouts.rs  remapping_loop.rs  struct_de.rs  struct_ser.rs  tablet_mode_switch_reader.rs  udev_utils.rs  version.rs
working/syntax-examples/: existing-1.json  existing-2.json  fancy-1.json  fancy-2.json
