[package]
name = "totalmapper"
version = "0.1.0"
authors = ["Owen Healy <owen@owenehealy.com.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.19.0"
rand = "0.7.3"
enum-utils = "0.1.2"
serde_json = "1.0.59"
serde = { version = "1.0.117", features = ["derive"] }
libc = "0.2.80"
cast = "0.2.3"
uinput-sys = "0.1.7"

