[package]
name = "totalmapper"
version = "0.1.0"
authors = ["Owen Healy <owen@owenehealy.com.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.19.0"
nix-8 = { package = "nix", version = "0.8.1" }
rand = "0.7.3"
enum-utils = "0.1.2"
serde_json = "1.0.59"
serde = { version = "1.0.117", features = ["derive"] }
libc = "0.2.80"
cast = "0.2.3"
uinput-sys = "0.1.7"
num-traits = "0.2"
num-derive = "0.3"
clap = "3.0.0-beta.2"
lazy_static = "1.4.0"
gag = "0.1.10"

[dependencies.mio]
version = "0.7.7"
features = ["os-ext"]

