
[package]
name = "totalmapper"
version = "1.1.0"
authors = ["Owen Healy <owen@owenehealy.com.com>"]
edition = "2018"

[dependencies]
nix = "0.19.0"
enum-utils = "0.1.2"
serde_json = "1.0.59"
serde = { version = "1.0.117", features = ["derive"] }
libc = "0.2.80"
uinput-sys = "0.1.7"
num-traits = "0.2"
num-derive = "0.3"
clap = "3.0.0-rc.7"
lazy_static = "1.4.0"
ioctls = "0.6.1"
mio = { version = "0.7.7", features = ["os-ext"] }
inotify = "0.10.0"
enum-display-derive = "0.1.1"
